# sockio

./: .env  Dockerfile  README.md  docker-compose.local.yml  docker-compose.stage.yml  docker-compose.yml  main.py  makefile  pyproject.toml
.github/workflows/: deploy.yml
client/: as_ws_client.py  sync_ws_client.py  ws_client.py
helpers/: generators_and_iterators.py  generators_and_iterators_2.py  memory_update_cycles.py  memory_update_functions.py
sockio/: api.py  auth.py  chat_service.py  config.py  connection_manager.py  contact_handlers.py  contact_service.py  db.py  fastapi_app.py  file_service.py  log.py  main.py  message_handler.py  message_history_service.py  models.py  openapi_spec.py  server.py  swagger_ui.py  websocket_docs.py
